Update font to MesloLGS Nerd Font

--- a/files/waybar/style.css
+++ b/files/waybar/style.css
@@ -53,7 +53,7 @@
 #waybar {
 	color: @text;
 	background: @base;
-	font-family: MesloLGMDZ NF, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+	font-family: MesloLGS Nerd Font, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
 	font-size: 14px;
 }
 
