--- a/files/waybar/style.css
+++ b/files/waybar/style.css
@@ -31,30 +31,36 @@
 /* Keyframes */
 
 @keyframes blink-critical {
-	to {
-		/*color: @white;*/
-		background-color: @red;
-	}
+  to {
+    /*color: @white;*/
+    background-color: @red;
+  }
 }
 
 /* Reset all styles */
 * {
-	border: none;
-	border-radius: 0;
-	min-height: 0;
-	margin: 0;
-	padding: 0;
-	box-shadow: none;
-	text-shadow: none;
-	icon-shadow: none;
+  border: none;
+  border-radius: 0;
+  min-height: 0;
+  margin: 0;
+  padding: 0;
+  box-shadow: none;
+  text-shadow: none;
+  icon-shadow: none;
 }
 
 /* The whole bar */
 #waybar {
-	color: @text;
-	background: @base;
-	font-family: MesloLGS Nerd Font, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-	font-size: 14px;
+  color: @text;
+  background: @base;
+  font-family:
+    MesloLGS Nerd Font,
+    FontAwesome,
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif;
+  font-size: 14px;
 }
 
 /* Each module */
@@ -73,8 +79,8 @@
 #disk,
 #user,
 #mpris {
-	padding-left: 8pt;
-	padding-right: 8pt;
+  padding-left: 8pt;
+  padding-right: 8pt;
 }
 
 /* Each critical module */
@@ -83,11 +89,11 @@
 #cpu.critical,
 #temperature.critical,
 #battery.critical.discharging {
-	animation-timing-function: linear;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	animation-name: blink-critical;
-	animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-name: blink-critical;
+  animation-duration: 1s;
 }
 
 /* Each warning */
@@ -96,111 +102,111 @@
 #cpu.warning,
 #temperature.warning,
 #battery.warning.discharging {
-	color: @red;
+  color: @red;
 }
 
 /* And now modules themselves in their respective order */
 
 /* Current hyprland mode (resize etc) */
 #mode {
-	color: @text;
-	background: @mantle;
+  color: @text;
+  background: @mantle;
 }
 
 /* Workspaces stuff */
 #workspaces button {
-	/*font-weight: bold;*/
-	padding-left: 4pt;
-	padding-right: 4pt;
-	color: @text;
-	background: @surface2;
+  /*font-weight: bold;*/
+  padding-left: 4pt;
+  padding-right: 4pt;
+  color: @text;
+  background: @surface2;
 }
 
 /* Inactive (on unfocused output) */
 #workspaces button.visible {
-	color: @surface2;
-	background: @sapphire;
+  color: @surface2;
+  background: @sapphire;
 }
 
 /* Active (on focused output) */
 #workspaces button.focused {
-	color: @crust;
-	background: @sapphire;
+  color: @crust;
+  background: @sapphire;
 }
 
 /* Contains an urgent window */
 #workspaces button.urgent {
-	color: @base;
-	background: @red;
+  color: @base;
+  background: @red;
 }
 
 /* Style when cursor is on the button */
 #workspaces button:hover {
-	background: @base;
-	color: @text;
+  background: @base;
+  color: @text;
 }
 
 #window {
-	margin-right: 35pt;
-	margin-left: 35pt;
+  margin-right: 35pt;
+  margin-left: 35pt;
 }
 
 #pulseaudio {
-	background: @surface2;
-	color: @text;
+  background: @surface2;
+  color: @text;
 }
 
 #network {
-	background: @surface2;
-	color: @text;
+  background: @surface2;
+  color: @text;
 }
 
 #memory {
-	background: @surface2;
-	color: @text;
+  background: @surface2;
+  color: @text;
 }
 
 #cpu {
-	background: @surface2;
-	color: @text;
+  background: @surface2;
+  color: @text;
 }
 
 #temperature {
-	background: @surface2;
-	color: @text;
+  background: @surface2;
+  color: @text;
 }
 
 #language {
-	background: @surface2;
-	color: @text;
+  background: @surface2;
+  color: @text;
 }
 
 #battery {
-	background: @surface2;
-	color: @text;
+  background: @surface2;
+  color: @text;
 }
 
 #tray {
-	background: @surface2;
+  background: @surface2;
 }
 
-#clock{
-	background: @surface2;
-	color: @text;
+#clock {
+  background: @surface2;
+  color: @text;
 }
 
-#backlight{
-	background: @surface2;
-	color: @text;
+#backlight {
+  background: @surface2;
+  color: @text;
 }
 
 #custom-arrow1 {
-	color: @surface2;
-	background: @base;
+  color: @surface2;
+  background: @base;
 }
 
 #custom-arrow2 {
-	font-size: 11pt;
-	color: @surface2;
-	background: @base;
+  font-size: 11pt;
+  color: @surface2;
+  background: @base;
 }
