--- a/files/waybar/style.css
+++ b/files/waybar/style.css
@@ -46,7 +46,7 @@
   padding: 0;
   box-shadow: none;
   text-shadow: none;
-  icon-shadow: none;
+  -gtk-icon-shadow: none;
 }
 
 /* The whole bar */
@@ -198,6 +198,22 @@
 #backlight {
   background: @surface2;
   color: @text;
+}
+
+#custom-launcher {
+  /*font-weight: bold;*/
+  padding-left: 4pt;
+  padding-right: 4pt;
+  color: @text;
+  background: @surface2;
+}
+
+#custom-poweroff {
+  /*font-weight: bold;*/
+  padding-left: 4pt;
+  padding-right: 4pt;
+  color: @text;
+  background: @surface2;
 }
 
 #custom-arrow1 {
