--- a/files/wlogout/style.css
+++ b/files/wlogout/style.css
@@ -67,7 +67,7 @@ button:focus, button:active, button:hover {
     background-image: image(url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
 }
 
-#hibernate {
+#uefi {
     background-image: image(url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
 }
 
